--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+cd ~/Desktop/physio-app
+cat <<EOF > index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>CMS Clinical V23</title>
+    <title>CMS Clinical V23.1</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#2c3e50">
@@ -44,9 +46,13 @@
         .rom-btn.range.selected { background: #e0f2fe; color: #0284c7; border-color: #0284c7; font-weight: 700; }
         .rom-btn.quality.selected { background: #fef2f2; color: #dc2626; border-color: #dc2626; font-weight: 700; }
         .chk-list { display: flex; flex-direction: column; gap: 8px; }
-        .chk-item { display: flex; align-items: center; gap: 12px; padding: 12px; background: #f9fafb; border-radius: 8px; border: 1px solid #e5e7eb; cursor: pointer; }
-        .chk-item.active { background: #eff6ff; border-color: var(--acc); }
-        .chk-item input { width: 20px; height: 20px; margin: 0; flex-shrink: 0; }
+        
+        /* FIX: Bigger tap area for checkboxes */
+        .chk-item { display: flex; align-items: center; gap: 12px; padding: 14px; background: #f9fafb; border-radius: 8px; border: 1px solid #e5e7eb; cursor: pointer; transition: background 0.2s; -webkit-tap-highlight-color: transparent; }
+        .chk-item:active { background: #e5e7eb; }
+        .chk-item.active { background: #eff6ff; border-color: var(--acc); font-weight:600; color:#1e3a8a; }
+        .chk-item input { width: 24px; height: 24px; margin: 0; flex-shrink: 0; pointer-events: none; } /* Ignore clicks on checkbox itself so row click handles it */
+        
         .fab { position: fixed; bottom: 30px; left: 20px; right: 20px; background: var(--acc); color: white; padding: 16px; border-radius: 50px; font-size: 1.1rem; font-weight: 700; border: none; box-shadow: 0 4px 15px rgba(41,128,185,0.4); z-index: 1000; cursor: pointer; display:flex; justify-content:center; align-items:center; gap:10px; }
     </style>
 </head>
@@ -196,7 +202,7 @@
         const users = JSON.parse(localStorage.getItem(USERS_KEY) || '{}');
         const sel = document.getElementById('user-select');
         sel.innerHTML = '<option value="" disabled selected>Select User</option>';
-        Object.keys(users).forEach(u => sel.innerHTML += `<option value="${u}">${u}</option>`);
+        Object.keys(users).forEach(u => sel.innerHTML += \`<option value="\${u}">\${u}</option>\`);
     }
     function toggleAuth(m) {
         document.getElementById('view-login').classList.toggle('hidden', m !== 'login');
@@ -225,13 +231,13 @@
     }
     function logout() { location.reload(); }
     function loadWorkspace() {
-        const raw = localStorage.getItem(`physio_data_${currentUser}`);
+        const raw = localStorage.getItem(\`physio_data_\${currentUser}\`);
         currentPatients = raw ? JSON.parse(raw) : [];
         if(currentPatients.length === 0) createPatientData();
         renderAll();
     }
     function saveWork() {
-        const view = document.getElementById(`view-${currentTab}`);
+        const view = document.getElementById(\`view-\${currentTab}\`);
         if(!view) return;
         const pt = currentPatients[currentTab];
         pt.id = view.querySelector('.pt-id').value;
@@ -284,7 +290,7 @@
             else if(chk) pt.roms[uid] = {chk: "Positive"}; 
         });
         pt.ex = Array.from(view.querySelectorAll('.ex-list input:checked')).map(c=>c.value);
-        localStorage.setItem(`physio_data_${currentUser}`, JSON.stringify(currentPatients));
+        localStorage.setItem(\`physio_data_\${currentUser}\`, JSON.stringify(currentPatients));
     }
     function createPatientData() {
         currentPatients.push({ id:"", hpi:"", soc:{}, assess:{}, plan:{}, roms:{}, ex:[] });
@@ -298,13 +304,13 @@
         Array.from(bar.children).forEach(c => { if(!c.classList.contains('add')) c.remove(); });
         currentPatients.forEach((pt, idx) => {
             const btn = document.createElement('div');
-            btn.className = `tab-btn ${idx === currentTab ? 'active' : ''}`;
-            btn.innerText = pt.id || `Pt ${idx+1}`;
+            btn.className = \`tab-btn \${idx === currentTab ? 'active' : ''}\`;
+            btn.innerText = pt.id || \`Pt \${idx+1}\`;
             btn.onclick = () => switchTab(idx);
             bar.insertBefore(btn, bar.lastElementChild);
             const clone = document.getElementById('patient-template').content.cloneNode(true);
             const view = clone.querySelector('.patient-view');
-            view.id = `view-${idx}`;
+            view.id = \`view-\${idx}\`;
             if(idx === currentTab) view.classList.add('active');
             view.querySelector('.pt-id').value = pt.id || "";
             view.querySelector('.dx').value = pt.dx || "";
@@ -349,85 +355,91 @@
             }
             const bc = view.querySelector('.body-container');
             bodyParts.forEach(bp => {
-                let html = `<div class="accordion"><div class="accordion-head" onclick="toggleAc(this)">${bp.name} <span>+</span></div><div class="accordion-body">`;
+                let html = \`<div class="accordion"><div class="accordion-head" onclick="toggleAc(this)">\${bp.name} <span>+</span></div><div class="accordion-body">\`;
                 bp.mov.forEach(m => {
-                    const uid = `${bp.id}_${m}`;
+                    const uid = \`\${bp.id}_\${m}\`;
                     const d = pt.roms[uid] || {m:"",r:"",q:""};
                     const rs = (t) => d.r===t ? 'selected' : '';
                     const qs = (t) => d.q.includes(t) ? 'selected' : '';
-                    html += `<div class="rom-row" data-uid="${uid}">
-                        <div class="rom-header"><div class="rom-title">${m}</div><input class="manual-input" value="${d.m}" onkeyup="saveWork()"></div>
-                        <div class="btn-grid"><div class="rom-btn range ${rs('Full')}" onclick="sel(this);saveWork()">Full</div><div class="rom-btn range ${rs('limited')}" onclick="sel(this);saveWork()">limited</div></div>
-                        <div class="btn-grid"><div class="rom-btn quality ${qs('Pain')}" onclick="tog(this);saveWork()">Pain</div></div>
-                    </div>`;
+                    html += \`<div class="rom-row" data-uid="\${uid}">
+                        <div class="rom-header"><div class="rom-title">\${m}</div><input class="manual-input" value="\${d.m}" onkeyup="saveWork()"></div>
+                        <div class="btn-grid"><div class="rom-btn range \${rs('Full')}" onclick="sel(this);saveWork()">Full</div><div class="rom-btn range \${rs('limited')}" onclick="sel(this);saveWork()">limited</div></div>
+                        <div class="btn-grid"><div class="rom-btn quality \${qs('Pain')}" onclick="tog(this);saveWork()">Pain</div></div>
+                    </div>\`;
                 });
                 if(bp.tests) {
-                    html += `<div style="font-weight:bold; margin-top:10px; font-size:0.85rem; color:#acc;">Special Tests</div>`;
+                    html += \`<div style="font-weight:bold; margin-top:10px; font-size:0.85rem; color:#acc;">Special Tests</div>\`;
                     bp.tests.forEach(t => {
-                        const uid = `${bp.id}_test_${t}`;
+                        const uid = \`\${bp.id}_test_\${t}\`;
                         const chk = pt.roms[uid]?.chk ? "checked" : "";
-                        html += `<div class="rom-row" data-uid="${uid}" style="display:flex; justify-content:space-between; align-items:center;">
-                            <span style="font-size:0.9rem;">${t}</span>
-                            <label><input type="checkbox" class="chk-input" ${chk} onchange="saveWork()"> +ve</label>
-                        </div>`;
+                        html += \`<div class="rom-row" data-uid="\${uid}" style="display:flex; justify-content:space-between; align-items:center;">
+                            <span style="font-size:0.9rem;">\${t}</span>
+                            <label><input type="checkbox" class="chk-input" \${chk} onchange="saveWork()"> +ve</label>
+                        </div>\`;
                     });
                 }
                 if(bp.palp) {
-                    html += `<div style="font-weight:bold; margin-top:10px; font-size:0.85rem; color:#acc;">Palpation (Tenderness)</div>`;
+                    html += \`<div style="font-weight:bold; margin-top:10px; font-size:0.85rem; color:#acc;">Palpation (Tenderness)</div>\`;
                     bp.palp.forEach(p => {
-                        const uid = `${bp.id}_palp_${p}`;
+                        const uid = \`\${bp.id}_palp_\${p}\`;
                         const chk = pt.roms[uid]?.chk ? "checked" : "";
-                        html += `<div class="rom-row" data-uid="${uid}" style="display:flex; justify-content:space-between; align-items:center;">
-                            <span style="font-size:0.9rem;">${p}</span>
-                            <label><input type="checkbox" class="chk-input" ${chk} onchange="saveWork()"> +ve</label>
-                        </div>`;
+                        html += \`<div class="rom-row" data-uid="\${uid}" style="display:flex; justify-content:space-between; align-items:center;">
+                            <span style="font-size:0.9rem;">\${p}</span>
+                            <label><input type="checkbox" class="chk-input" \${chk} onchange="saveWork()"> +ve</label>
+                        </div>\`;
                     });
                 }
-                html += `</div></div>`;
+                html += \`</div></div>\`;
                 bc.insertAdjacentHTML('beforeend', html);
             });
             const el = view.querySelector('.ex-list');
             exercises.forEach(e => {
                 const chk = pt.ex.includes(e) ? 'checked' : '';
-                el.insertAdjacentHTML('beforeend', `<label class="chk-item"><input type="checkbox" value="${e}" ${chk} onchange="saveWork()"><span>${e}</span></label>`);
+                el.insertAdjacentHTML('beforeend', \`<label class="chk-item" onclick="toggleChk(this)"><input type="checkbox" value="\${e}" \${chk}><span>\${e}</span></label>\`);
             });
             cont.appendChild(view);
         });
     }
     function switchTab(i) { saveWork(); currentTab = i; renderAll(); }
-    function updateTabName(i) { document.querySelectorAll('.tab-btn')[currentTab].innerText = i.value.substr(0,8) || `Pt ${currentTab+1}`; }
+    function updateTabName(i) { document.querySelectorAll('.tab-btn')[currentTab].innerText = i.value.substr(0,8) || \`Pt \${currentTab+1}\`; }
     function toggleStairs(sel) { sel.nextElementSibling.classList.toggle('hidden', sel.value !== 'Stairs'); }
+    function toggleChk(el) { 
+        const chk = el.querySelector('input'); 
+        chk.checked = !chk.checked; 
+        el.classList.toggle('active', chk.checked);
+        saveWork();
+    }
     function generateNote() {
         saveWork();
         const pt = currentPatients[currentTab];
         const line = "======================================================";
-        let t = `Diagnosis: ${pt.dx || ''}\nReason for referral: ${pt.ref || ''}\n`;
-        t += `Physiotherapy Home Visit\n${line}\n`;
-        t += `History of Present Illness:\n${pt.hpi || ''}\n`;
-        t += `Past Medical History:\n${pt.pmh || ''}\n`;
-        t += `Medication:\n${pt.meds || ''}\n`;
-        t += `Social History:\nLives with ${pt.soc.live || ''}\nTake cared by ${pt.soc.carer || ''}\nADL-I\n`;
-        t += `Premorbid: ${pt.soc.pre || ''}\n`;
-        let envText = `${pt.soc.note || ''}\n${pt.soc.type || ''}\n`;
-        if(pt.soc.acc === 'Stairs') envText += `Stairs: ${pt.soc.stairs || '?'} steps\n`;
-        else envText += `${pt.soc.acc || ''}\nNo stairs\n`;
-        t += `Home Environment:\n${envText}`;
-        let toiletText = `Toilet: ${pt.soc.wc || ''}`;
-        let bathText = `Bath: ${pt.soc.bath || ''}`;
+        let t = \`Diagnosis: \${pt.dx || ''}\\nReason for referral: \${pt.ref || ''}\\n\`;
+        t += \`Physiotherapy Home Visit\\n\${line}\\n\`;
+        t += \`History of Present Illness:\\n\${pt.hpi || ''}\\n\`;
+        t += \`Past Medical History:\\n\${pt.pmh || ''}\\n\`;
+        t += \`Medication:\\n\${pt.meds || ''}\\n\`;
+        t += \`Social History:\\nLives with \${pt.soc.live || ''}\\nTake cared by \${pt.soc.carer || ''}\\nADL-I\\n\`;
+        t += \`Premorbid: \${pt.soc.pre || ''}\\n\`;
+        let envText = \`\${pt.soc.note || ''}\\n\${pt.soc.type || ''}\\n\`;
+        if(pt.soc.acc === 'Stairs') envText += \`Stairs: \${pt.soc.stairs || '?'} steps\\n\`;
+        else envText += \`\${pt.soc.acc || ''}\\nNo stairs\\n\`;
+        t += \`Home Environment:\\n\${envText}\`;
+        let toiletText = \`Toilet: \${pt.soc.wc || ''}\`;
+        let bathText = \`Bath: \${pt.soc.bath || ''}\`;
         if(pt.soc.rails) { toiletText += " (Handrails available)"; bathText += " (Handrails available)"; }
-        t += `${toiletText}\n${bathText}\n`;
-        t += `Fall History and Reason: ${pt.fall || ''}\n`;
-        t += `Mental Status: ${pt.ment || ''}\n`;
-        t += `Previous physiotherapy treatment received and its effects:\n${pt.prev || 'NIL'}\n`;
-        t += `Subjective examination:\nCompliant: ${pt.assess.subj || ''}\nFunctional limitation: ${pt.assess.func || ''}\n`;
-        t += `Objective examination:\nPatient assessed with ${pt.assess.ass_with || ''}\nGeneral condition stable\n`;
-        t += `Blood Pressure ${pt.assess.bp || ''} mmHg ;Pulse ${pt.assess.hr || ''} bpm\nTOCC-ve\nBody temperature: afebrile\n`;
-        t += `Observation:\n${pt.assess.obs || ''}\n`;
+        t += \`\${toiletText}\\n\${bathText}\\n\`;
+        t += \`Fall History and Reason: \${pt.fall || ''}\\n\`;
+        t += \`Mental Status: \${pt.ment || ''}\\n\`;
+        t += \`Previous physiotherapy treatment received and its effects:\\n\${pt.prev || 'NIL'}\\n\`;
+        t += \`Subjective examination:\\nCompliant: \${pt.assess.subj || ''}\\nFunctional limitation: \${pt.assess.func || ''}\\n\`;
+        t += \`Objective examination:\\nPatient assessed with \${pt.assess.ass_with || ''}\\nGeneral condition stable\\n\`;
+        t += \`Blood Pressure \${pt.assess.bp || ''} mmHg ;Pulse \${pt.assess.hr || ''} bpm\\nTOCC-ve\\nBody temperature: afebrile\\n\`;
+        t += \`Observation:\\n\${pt.assess.obs || ''}\\n\`;
         bodyParts.forEach(bp => {
             let pText = "";
             let hasHeader = false;
             bp.mov.forEach(m => {
-                const uid = `${bp.id}_${m}`;
+                const uid = \`\${bp.id}_\${m}\`;
                 const d = pt.roms[uid];
                 let val = "";
                 if(d) {
@@ -436,37 +448,37 @@
                     if(d.m) val += "(" + d.m + ")";
                 }
                 if(val.trim()) {
-                    if(!hasHeader) { pText += `[${bp.name}]\n`; hasHeader = true; }
-                    pText += `${m}: ${val || '-'}\n`;
+                    if(!hasHeader) { pText += \`[\${bp.name}]\\n\`; hasHeader = true; }
+                    pText += \`\${m}: \${val || '-'}\\n\`;
                 }
             });
             if(bp.tests) {
                 bp.tests.forEach(test => {
-                    const uid = `${bp.id}_test_${test}`;
+                    const uid = \`\${bp.id}_test_\${test}\`;
                     if(pt.roms[uid]?.chk) {
-                         if(!hasHeader) { pText += `[${bp.name}]\n`; hasHeader = true; }
-                         pText += `${test}: Positive\n`;
+                         if(!hasHeader) { pText += \`[\${bp.name}]\\n\`; hasHeader = true; }
+                         pText += \`\${test}: Positive\\n\`;
                     }
                 });
             }
             if(bp.palp) {
                 bp.palp.forEach(palp => {
-                    const uid = `${bp.id}_palp_${palp}`;
+                    const uid = \`\${bp.id}_palp_\${palp}\`;
                     if(pt.roms[uid]?.chk) {
-                         if(!hasHeader) { pText += `[${bp.name}]\n`; hasHeader = true; }
-                         pText += `Tenderness: ${palp}\n`;
+                         if(!hasHeader) { pText += \`[\${bp.name}]\\n\`; hasHeader = true; }
+                         pText += \`Tenderness: \${palp}\\n\`;
                     }
                 });
             }
             t += pText;
         });
-        t += `Power\nUpper limb: right / left\n                   ${pt.assess.pul || ''}\n`;
-        t += `Lower limb: right / left\n                   ${pt.assess.pll || ''}\n`;
-        t += `Bed mobility: ${pt.plan.bed || ''}\nTransfer: ${pt.plan.tf || ''}\nGait: ${pt.plan.gait || ''}\n`;
-        t += `Problem: ${pt.plan.prob || ''}\nShort term goal: ${pt.plan.stg || ''}\nLong term goal: ${pt.plan.ltg || ''}\n`;
-        t += `Home exercise taught with exercise leaflet and red theraband given (5-10 repetitions/set, 2-3 sets/day):\n`;
-        pt.ex.forEach(e => t += `-${e}\n`);
-        t += `Machine Test Done\nWarning / Instructional given and contraindication checked\nPost treatment uneventful`;
+        t += \`Power\\nUpper limb: right / left\\n                   \${pt.assess.pul || ''}\\n\`;
+        t += \`Lower limb: right / left\\n                   \${pt.assess.pll || ''}\\n\`;
+        t += \`Bed mobility: \${pt.plan.bed || ''}\\nTransfer: \${pt.plan.tf || ''}\\nGait: \${pt.plan.gait || ''}\\n\`;
+        t += \`Problem: \${pt.plan.prob || ''}\\nShort term goal: \${pt.plan.stg || ''}\\nLong term goal: \${pt.plan.ltg || ''}\\n\`;
+        t += \`Home exercise taught with exercise leaflet and red theraband given (5-10 repetitions/set, 2-3 sets/day):\\n\`;
+        pt.ex.forEach(e => t += \`-\${e}\\n\`);
+        t += \`Machine Test Done\\nWarning / Instructional given and contraindication checked\\nPost treatment uneventful\`;
         document.getElementById('copy_target').value = t;
         document.getElementById('copy_target').select();
         document.execCommand('copy');
@@ -478,3 +490,5 @@
 </script>
 </body>
 </html>
+EOF
+
