--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cat <<EOF > index.html
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>CMS Clinical V23.1</title>
+    <title>CMS Clinical V23.2</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#2c3e50">
@@ -17,7 +17,7 @@ cat <<EOF > index.html
         .auth-card { background: white; color: #333; width: 85%; max-width: 320px; padding: 25px; border-radius: 16px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.3); }
         .auth-input { width: 100%; padding: 12px; margin: 8px 0; border: 2px solid #e5e7eb; border-radius: 8px; font-size: 1.1rem; text-align: center; }
         .auth-btn { width: 100%; padding: 14px; background: var(--acc); color: white; border: none; border-radius: 8px; font-weight: bold; font-size: 1rem; margin-top: 15px; cursor: pointer; }
-        .auth-link { margin-top: 15px; font-size: 0.85rem; color: var(--acc); text-decoration: underline; cursor: pointer; }
+        .auth-link { margin-top: 15px; font-size: 0.9rem; color: var(--acc); text-decoration: underline; cursor: pointer; padding: 10px; }
         .hidden { display: none !important; }
         header { background: var(--main); color: white; padding: 12px; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .top-row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; font-size: 0.9rem; }
@@ -46,20 +46,17 @@ cat <<EOF > index.html
         .rom-btn.range.selected { background: #e0f2fe; color: #0284c7; border-color: #0284c7; font-weight: 700; }
         .rom-btn.quality.selected { background: #fef2f2; color: #dc2626; border-color: #dc2626; font-weight: 700; }
         .chk-list { display: flex; flex-direction: column; gap: 8px; }
-        
-        /* FIX: Bigger tap area for checkboxes */
         .chk-item { display: flex; align-items: center; gap: 12px; padding: 14px; background: #f9fafb; border-radius: 8px; border: 1px solid #e5e7eb; cursor: pointer; transition: background 0.2s; -webkit-tap-highlight-color: transparent; }
         .chk-item:active { background: #e5e7eb; }
         .chk-item.active { background: #eff6ff; border-color: var(--acc); font-weight:600; color:#1e3a8a; }
-        .chk-item input { width: 24px; height: 24px; margin: 0; flex-shrink: 0; pointer-events: none; } /* Ignore clicks on checkbox itself so row click handles it */
-        
+        .chk-item input { width: 24px; height: 24px; margin: 0; flex-shrink: 0; pointer-events: none; }
         .fab { position: fixed; bottom: 30px; left: 20px; right: 20px; background: var(--acc); color: white; padding: 16px; border-radius: 50px; font-size: 1.1rem; font-weight: 700; border: none; box-shadow: 0 4px 15px rgba(41,128,185,0.4); z-index: 1000; cursor: pointer; display:flex; justify-content:center; align-items:center; gap:10px; }
     </style>
 </head>
 <body>
 <div id="auth-screen">
     <div id="view-login" class="auth-card">
-        <h3>CMS Clinical V23</h3>
+        <h3>CMS Clinical V23.2</h3>
         <select id="user-select" class="auth-input"></select>
         <input type="tel" id="user-pin" class="auth-input" placeholder="PIN" maxlength="6" style="-webkit-text-security:disc;">
         <button class="auth-btn" onclick="attemptLogin()">Unlock</button>
@@ -201,8 +198,14 @@ cat <<EOF > index.html
     function loadUsersDropdown() {
         const users = JSON.parse(localStorage.getItem(USERS_KEY) || '{}');
         const sel = document.getElementById('user-select');
-        sel.innerHTML = '<option value="" disabled selected>Select User</option>';
-        Object.keys(users).forEach(u => sel.innerHTML += \`<option value="\${u}">\${u}</option>\`);
+        const count = Object.keys(users).length;
+        if(count === 0) {
+            sel.innerHTML = '<option value="" disabled selected>No users found</option>';
+            toggleAuth('register'); // Auto-switch to register if empty
+        } else {
+            sel.innerHTML = '<option value="" disabled selected>Select User</option>';
+            Object.keys(users).forEach(u => sel.innerHTML += \`<option value="\${u}">\${u}</option>\`);
+        }
     }
     function toggleAuth(m) {
         document.getElementById('view-login').classList.toggle('hidden', m !== 'login');
@@ -211,15 +214,20 @@ cat <<EOF > index.html
     function registerUser() {
         const n = document.getElementById('reg-name').value.trim();
         const p = document.getElementById('reg-pin').value.trim();
-        if(!n || p.length < 4) return alert("Invalid Input");
+        if(!n || p.length < 4) return alert("Enter Name & 4-digit PIN");
         const users = JSON.parse(localStorage.getItem(USERS_KEY) || '{}');
         users[n] = p;
         localStorage.setItem(USERS_KEY, JSON.stringify(users));
         loadUsersDropdown(); toggleAuth('login');
+        // Auto-select and login
+        document.getElementById('user-select').value = n;
+        document.getElementById('user-pin').value = p;
+        attemptLogin();
     }
     function attemptLogin() {
         const n = document.getElementById('user-select').value;
         const p = document.getElementById('user-pin').value;
+        if(!n) return alert("Please select a user");
         const users = JSON.parse(localStorage.getItem(USERS_KEY) || '{}');
         if(users[n] == p) {
             currentUser = n;
@@ -491,4 +499,5 @@ cat <<EOF > index.html
 </body>
 </html>
 EOF
+
 
